This is my solution to the calculator-simple.

--- a/index.html
+++ b/index.html
@@ -315,7 +315,6 @@
             </div>
             <div class="col-lg-6 my-2">
               <ul class="list-group">
-                <li class="list-group-item">t = <b>tan</b></li>
                 <li class="list-group-item">* = <b>×</b></li>
                 <li class="list-group-item">t = <b>tan</b></li>
                 <li class="list-group-item">- = <b>-</b></li>
@@ -323,6 +322,7 @@
                 <li class="list-group-item">
                   ^ = <b>x<sup>y</sup></b>
                 </li>
+                <li class="list-group-item">. = <b>.</b></li>
                 <li class="list-group-item">Enter = <b>=</b></li>
                 <li class="list-group-item">+ = <b>+</b></li>
                 <li class="list-group-item">
